dbeaver/dbeaver#40466: fix tests and quote in lines